--- a/components/ImmigrationNews/ImmigrationNews.module.css
+++ b/components/ImmigrationNews/ImmigrationNews.module.css
@@ -694,9 +694,11 @@
   margin: 0 0 0.35rem 0;
   line-height: 1.3;
   color: var(--text-primary);
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
   overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   flex-shrink: 0;
 }
 
